--- a/index.html
+++ b/index.html
@@ -7,18 +7,20 @@
     <meta name="keywords" content="portfolio, martin, saldinger, martin saldinger, freelance, web-dev">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="/tamanoir/favicon.png">
     <title>Martin Saldinger</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/style_1.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
+    <link rel="icon" type="image/png" href="/tamanoir/favicon.png">
 </head>
 <body>
     <header>
-        <img src="images/svg/logo.svg" alt="logo">
         <nav>
-            <a href="#who">Who am I ?</a>
-            <a href="#skills">Skills</a>
-            <a href="#contact">Contact</a>
+            <ul>
+                <li><a href="#who">Who am I ?</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><button>change layout</button></li>
+            </ul>
         </nav>
     </header>
     <section id="hero">
@@ -37,11 +39,11 @@
             <h2>Who am I ?</h2>
             <p>
                 Hello, my name is <b>Martin Saldinger</b>.<br>
-                I am a high school student and I am passionate about computer sciense, more precisely web development.<br>
+                I am a high school student at the Notre Dame Institute in Saint Germain en Laye <a target="_blanck" href="http://www.ind78.fr"><img src="images/icons/ind.png" alt="logo IND"></a> and I am passionate about computer sciense, more precisely web development.<br>
                 Even though I still have a lot to learn in that field as it is so vast, I am convinced that I have the basic skills to propose my services.
             </p>
         </div>
-        <svg viewBox="0 0 1920 200" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <svg viewBox="0 0 1920 205" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M0 205.349L1920 0H0V205.349Z" fill="#f8f9fa"/>
         </svg>    
     </section>
@@ -80,7 +82,7 @@
         </div>
     </section>
     <section id="contact">
-        <svg viewBox="0 0 1920 200" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <svg viewBox="0 0 1920 204" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M1920 0L0 205.349H1920V0Z" fill="#f8f9fa"/>
         </svg>
         <div>
@@ -119,8 +121,15 @@
     <footer>
         <p>made by LeTamanoir | © All rights reserved</p>
     </footer>
-
     <script>
+        const btn = document.querySelector("header button");
+        const style = document.getElementsByTagName('link');
+        btn.addEventListener("click", () => {
+            var uri = `${window.location.protocol}//${window.location.hostname}/portfolio-martin/style/`;
+            style[0].href == `${uri}style_1.css` ? style[0].href = `${uri}style_2.css` : style[0].href = `${uri}style_1.css`;
+        })
+
+
         gsap.from("#hero > img",{duration:.8,x:50,opacity:0});
         gsap.from("#hero > h1",{duration:.8,y:50,opacity:0});
         gsap.from("nav > a",{duration:1,y:-20,opacity:0,ease:"elastic",stagger:.1});
